# pymoors

./: .gitignore  .pre-commit-config.yaml  404.html  Cargo.toml  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yaml  codspeed.yaml  deploy-docs.yaml  release.yaml
benches/: fds.rs
development/: index.html
docs/: development.md  getting_started.md  index.md
docs/user_guide/: algorithms.md  duplicates.md  fitness_and_constraints.md  operators.md
getting_started/: index.html
pymoors_macros/: Cargo.toml  README.md
pymoors_macros/src/: lib.rs
python/pymoors/: __init__.py  _pymoors.pyi  schemas.py
search/: search_index.json
src/: evaluator.rs  genetic.rs  lib.rs  prelude.rs  printer.rs  random.rs
src/algorithms/: macros.rs  mod.rs  nsga2.rs  nsga3.rs  py_errors.rs  rnsga2.rs
src/diversity_metrics/: crowding.rs  mod.rs  reference.rs
src/duplicates/: close.rs  exact.rs  mod.rs
src/helpers/: duplicates.rs  functions.rs  macros.rs  mod.rs  parser.rs  printer.rs
src/non_dominated_sorting/: distance.rs  dominator.rs  mod.rs
src/operators/: evolve.rs  macros.rs  mod.rs  py_operators.rs
src/operators/crossover/: exponential.rs  mod.rs  order.rs  sbx.rs  single_point.rs  uniform_binary.rs
src/operators/mutation/: binflip.rs  displacement.rs  gaussian.rs  mod.rs  scramble.rs  swap.rs
src/operators/sampling/: mod.rs  permutation.rs  random.rs
src/operators/sampling/random/: binary.rs  float.rs  int.rs  mod.rs
src/operators/selection/: mod.rs  random_tournament.rs  rank_and_crowding_tournament.rs
src/operators/survival/: mod.rs  rank_and_crowding.rs  rank_reference_points.rs  reference_points.rs
stylesheets/: extra.css
tests/: test_available_operators.py  test_schemas.py
tests/algorithms/: conftest.py  test_dtlz2.py  test_infeasibility.py  test_knapsack.py  test_small_real_biobj.py  test_tsp.py  test_validations.py
tests/benchmarks/: test_algorithms_benchmark.py
tests/duplicates/: test_duplicates_cleaner.py
tests/operators/: test_crossover.py  test_mutation.py  test_sampling.py
user_guide/algorithms/: index.html
user_guide/duplicates/: index.html
user_guide/fitness_and_constraints/: index.html
user_guide/operators/: index.html
